import tools.elmfer.*

plugins {
	id "net.fabricmc.fabric-loom-remap" version "${loom_version}"
	id "com.gradleup.shadow" version "${shadow_version}"
}

version = "${mod_version}+${minecraft_version}"
group = maven_group

base {
	archivesName = archives_base_name
}

loom.log4jConfigs.from "log4j-dev.xml"

repositories {
	mavenCentral()
}

dependencies {
	minecraft "com.mojang:minecraft:${minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"


    runtimeOnly shadow("io.github.spair:imgui-java-binding:${imgui_version}")
	runtimeOnly shadow("io.github.spair:imgui-java-lwjgl3:${imgui_version}") {
		exclude(group: "org.lwjgl") // Do not include transitive LWJGL3 dependency.
	}

	runtimeOnly shadow("io.github.spair:imgui-java-natives-windows:${imgui_version}")
	runtimeOnly shadow("io.github.spair:imgui-java-natives-linux:${imgui_version}")
	runtimeOnly shadow("io.github.spair:imgui-java-natives-macos:${imgui_version}")
}

tasks.withType(JavaCompile).configureEach {
	options.release = 21
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}
jar {
	from("LICENSE") {
		rename { "${it}_${base.archivesName}"}
	}
}

var genNativeSources = tasks.register("genNativeSources", GenNativeSourcesTask) {
	sourceDir = sourceSets.main.java.sourceDirectories.first()
}

var compileNatives = tasks.register("compileNatives", CompileNativesTask) {
	inputs.property "version", version
	sourceDir = file("src/main/cpp")
	bridgeDir.set(genNativeSources.<Directory>flatMap {it.bridgeDir })
	buildDir = layout.buildDirectory.dir("tmp/${name}")
	outputDir = layout.buildDirectory.dir("natives")

	finalizedBy(copyNatives)
}

var prebuiltProvider = project.provider { layout.projectDirectory.dir(project.property("prebuilt_natives") as String) }
var compiledProvider = compileNatives.<Directory>flatMap { it.outputDir }

var nativesProvider = project.hasProperty("prebuilt_natives") ? prebuiltProvider : compiledProvider

tasks.register("copyNatives", Copy) {
	inputs.files "natives", nativesProvider

	from(nativesProvider)

	into(layout.projectDirectory.dir(loom.runs.client.runDir)
			.dir("cnmcu/natives/${version}"))
}

processResources {
	inputs.files "natives", nativesProvider
	inputs.property "version", version
	inputs.property "minecraft_version", minecraft_version
	inputs.property "loader_version", loader_version

	filesMatching("fabric.mod.json") {
		expand "version": version,
				"minecraft_version": minecraft_version,
				"loader_version": loader_version
	}

	from(nativesProvider) {
		into("com/elmfer/cnmcu/config")
	}
}

shadowJar {
	configurations = [project.configurations.shadow]
}

remapJar {
	input = tasks.shadowJar.archiveFile
}
